fst_bindings.jai


fstETab :: struct {
    name:        *u8;
    elem_count:  u32;
    literal_arr: **u8;
    val_arr:     **u8;
}
#run {
    instance: fstETab;
    assert(((cast(*void)(*instance.name)) - cast(*void)(*instance)) == 0, "fstETab.name has unexpected offset % instead of 0", ((cast(*void)(*instance.name)) - cast(*void)(*instance)));
    assert(size_of(type_of(fstETab.name)) == 8, "fstETab.name has unexpected size % instead of 8", size_of(type_of(fstETab.name)));
    assert(((cast(*void)(*instance.elem_count)) - cast(*void)(*instance)) == 8, "fstETab.elem_count has unexpected offset % instead of 8", ((cast(*void)(*instance.elem_count)) - cast(*void)(*instance)));
    assert(size_of(type_of(fstETab.elem_count)) == 4, "fstETab.elem_count has unexpected size % instead of 4", size_of(type_of(fstETab.elem_count)));
    assert(((cast(*void)(*instance.literal_arr)) - cast(*void)(*instance)) == 16, "fstETab.literal_arr has unexpected offset % instead of 16", ((cast(*void)(*instance.literal_arr)) - cast(*void)(*instance)));
    assert(size_of(type_of(fstETab.literal_arr)) == 8, "fstETab.literal_arr has unexpected size % instead of 8", size_of(type_of(fstETab.literal_arr)));
    assert(((cast(*void)(*instance.val_arr)) - cast(*void)(*instance)) == 24, "fstETab.val_arr has unexpected offset % instead of 24", ((cast(*void)(*instance.val_arr)) - cast(*void)(*instance)));
    assert(size_of(type_of(fstETab.val_arr)) == 8, "fstETab.val_arr has unexpected size % instead of 8", size_of(type_of(fstETab.val_arr)));
    assert(size_of(fstETab) == 32, "fstETab has size % instead of 32", size_of(fstETab));
}

/*
* writer functions
*/
fstWriterClose :: (ctx: *void) -> void #foreign fstlib;
fstWriterCreate :: (nam: *u8, use_compressed_hier: s32) -> *void #foreign fstlib;
fstWriterCreateEnumTable :: (ctx: *void, name: *u8, elem_count: u32, min_valbits: u32, literal_arr: **u8, val_arr: **u8) -> fstEnumHandle #foreign fstlib;

/* used for Verilog/SV */
fstWriterCreateVar :: (ctx: *void, vt: fstVarType, vd: fstVarDir, len: u32, nam: *u8, aliasHandle: fstHandle) -> fstHandle #foreign fstlib;

/* future expansion for VHDL and other languages.  The variable type, data type, etc map onto
the current Verilog/SV one.  The "type" string is optional for a more verbose or custom description */
fstWriterCreateVar2 :: (ctx: *void, vt: fstVarType, vd: fstVarDir, len: u32, nam: *u8, aliasHandle: fstHandle, type: *u8, svt: fstSupplementalVarType, sdt: fstSupplementalDataType) -> fstHandle #foreign fstlib;

fstWriterEmitDumpActive :: (ctx: *void, enable: s32) -> void #foreign fstlib;
fstWriterEmitEnumTableRef :: (ctx: *void, handle: fstEnumHandle) -> void #foreign fstlib;
fstWriterEmitValueChange :: (ctx: *void, handle: fstHandle, val: *void) -> void #foreign fstlib;
fstWriterEmitValueChange32 :: (ctx: *void, handle: fstHandle, bits: u32, val: u32) -> void #foreign fstlib;

fstWriterEmitValueChange64 :: (ctx: *void, handle: fstHandle, bits: u32, val: u64) -> void #foreign fstlib;

fstWriterEmitValueChangeVec32 :: (ctx: *void, handle: fstHandle, bits: u32, val: *u32) -> void #foreign fstlib;

fstWriterEmitValueChangeVec64 :: (ctx: *void, handle: fstHandle, bits: u32, val: *u64) -> void #foreign fstlib;

fstWriterEmitVariableLengthValueChange :: (ctx: *void, handle: fstHandle, val: *void, len: u32) -> void #foreign fstlib;
fstWriterEmitTimeChange :: (ctx: *void, tim: u64) -> void #foreign fstlib;
fstWriterFlushContext :: (ctx: *void) -> void #foreign fstlib;
fstWriterGetDumpSizeLimitReached :: (ctx: *void) -> s32 #foreign fstlib;
fstWriterGetFseekFailed :: (ctx: *void) -> s32 #foreign fstlib;
fstWriterSetAttrBegin :: (ctx: *void, attrtype: fstAttrType, subtype: s32, attrname: *u8, arg: u64) -> void #foreign fstlib;

fstWriterSetAttrEnd :: (ctx: *void) -> void #foreign fstlib;
fstWriterSetComment :: (ctx: *void, comm: *u8) -> void #foreign fstlib;
fstWriterSetDate :: (ctx: *void, dat: *u8) -> void #foreign fstlib;
fstWriterSetDumpSizeLimit :: (ctx: *void, numbytes: u64) -> void #foreign fstlib;
fstWriterSetEnvVar :: (ctx: *void, envvar: *u8) -> void #foreign fstlib;
fstWriterSetFileType :: (ctx: *void, filetype: fstFileType) -> void #foreign fstlib;
fstWriterSetPackType :: (ctx: *void, typ: fstWriterPackType) -> void #foreign fstlib;
fstWriterSetParallelMode :: (ctx: *void, enable: s32) -> void #foreign fstlib;
fstWriterSetRepackOnClose :: (ctx: *void, enable: s32) -> void #foreign fstlib;
fstWriterSetScope :: (ctx: *void, scopetype: fstScopeType, scopename: *u8, scopecomp: *u8) -> void #foreign fstlib;

fstWriterSetSourceInstantiationStem :: (ctx: *void, path: *u8, line: u32, use_realpath: u32) -> void #foreign fstlib;
fstWriterSetSourceStem :: (ctx: *void, path: *u8, line: u32, use_realpath: u32) -> void #foreign fstlib;
fstWriterSetTimescale :: (ctx: *void, ts: s32) -> void #foreign fstlib;
fstWriterSetTimescaleFromString :: (ctx: *void, s: *u8) -> void #foreign fstlib;
fstWriterSetTimezero :: (ctx: *void, tim: s64) -> void #foreign fstlib;
fstWriterSetUpscope :: (ctx: *void) -> void #foreign fstlib;
fstWriterSetValueList :: (ctx: *void, vl: *u8) -> void #foreign fstlib;
fstWriterSetVersion :: (ctx: *void, vers: *u8) -> void #foreign fstlib;

/*
* reader functions
*/
fstReaderClose :: (ctx: *void) -> void #foreign fstlib;
fstReaderClrFacProcessMask :: (ctx: *void, facidx: fstHandle) -> void #foreign fstlib;
fstReaderClrFacProcessMaskAll :: (ctx: *void) -> void #foreign fstlib;
fstReaderGetAliasCount :: (ctx: *void) -> u64 #foreign fstlib;
fstReaderGetCurrentFlatScope :: (ctx: *void) -> *u8 #foreign fstlib;
fstReaderGetCurrentScopeUserInfo :: (ctx: *void) -> *void #foreign fstlib;
fstReaderGetCurrentScopeLen :: (ctx: *void) -> s32 #foreign fstlib;
fstReaderGetDateString :: (ctx: *void) -> *u8 #foreign fstlib;
fstReaderGetDoubleEndianMatchState :: (ctx: *void) -> s32 #foreign fstlib;
fstReaderGetDumpActivityChangeTime :: (ctx: *void, idx: u32) -> u64 #foreign fstlib;
fstReaderGetDumpActivityChangeValue :: (ctx: *void, idx: u32) -> u8 #foreign fstlib;
fstReaderGetEndTime :: (ctx: *void) -> u64 #foreign fstlib;
fstReaderGetFacProcessMask :: (ctx: *void, facidx: fstHandle) -> s32 #foreign fstlib;
fstReaderGetFileType :: (ctx: *void) -> s32 #foreign fstlib;
fstReaderGetFseekFailed :: (ctx: *void) -> s32 #foreign fstlib;
fstReaderGetMaxHandle :: (ctx: *void) -> fstHandle #foreign fstlib;
fstReaderGetMemoryUsedByWriter :: (ctx: *void) -> u64 #foreign fstlib;
fstReaderGetNumberDumpActivityChanges :: (ctx: *void) -> u32 #foreign fstlib;
fstReaderGetScopeCount :: (ctx: *void) -> u64 #foreign fstlib;
fstReaderGetStartTime :: (ctx: *void) -> u64 #foreign fstlib;
fstReaderGetTimescale :: (ctx: *void) -> s8 #foreign fstlib;
fstReaderGetTimezero :: (ctx: *void) -> s64 #foreign fstlib;
fstReaderGetValueChangeSectionCount :: (ctx: *void) -> u64 #foreign fstlib;
fstReaderGetValueFromHandleAtTime :: (ctx: *void, tim: u64, facidx: fstHandle, buf: *u8) -> *u8 #foreign fstlib;
fstReaderGetVarCount :: (ctx: *void) -> u64 #foreign fstlib;
fstReaderGetVersionString :: (ctx: *void) -> *u8 #foreign fstlib;
fstReaderIterateHier :: (ctx: *void) -> *fstHier #foreign fstlib;
fstReaderIterateHierRewind :: (ctx: *void) -> s32 #foreign fstlib;
fstReaderIterBlocks :: (ctx: *void, value_change_callback: #type (user_callback_data_pointer: *void, time: u64, facidx: fstHandle, value: *u8) -> void #c_call, user_callback_data_pointer: *void, vcdhandle: *FILE) -> s32 #foreign fstlib;

fstReaderIterBlocks2 :: (ctx: *void, value_change_callback: #type (user_callback_data_pointer: *void, time: u64, facidx: fstHandle, value: *u8) -> void #c_call, value_change_callback_varlen: #type (user_callback_data_pointer: *void, time: u64, facidx: fstHandle, value: *u8, len: u32) -> void #c_call, user_callback_data_pointer: *void, vcdhandle: *FILE) -> s32 #foreign fstlib;

fstReaderIterBlocksSetNativeDoublesOnCallback :: (ctx: *void, enable: s32) -> void #foreign fstlib;
fstReaderOpen :: (nam: *u8) -> *void #foreign fstlib;
fstReaderOpenForUtilitiesOnly :: () -> *void #foreign fstlib;
fstReaderPopScope :: (ctx: *void) -> *u8 #foreign fstlib;
fstReaderProcessHier :: (ctx: *void, vcdhandle: *FILE) -> s32 #foreign fstlib;
fstReaderPushScope :: (ctx: *void, nam: *u8, user_info: *void) -> *u8 #foreign fstlib;
fstReaderResetScope :: (ctx: *void) -> void #foreign fstlib;
fstReaderSetFacProcessMask :: (ctx: *void, facidx: fstHandle) -> void #foreign fstlib;
fstReaderSetFacProcessMaskAll :: (ctx: *void) -> void #foreign fstlib;
fstReaderSetLimitTimeRange :: (ctx: *void, start_time: u64, end_time: u64) -> void #foreign fstlib;
fstReaderSetUnlimitedTimeRange :: (ctx: *void) -> void #foreign fstlib;
fstReaderSetVcdExtensions :: (ctx: *void, enable: s32) -> void #foreign fstlib;

/*
* utility functions
*/
fstUtilityBinToEscConvertedLen :: (s: *u8, len: s32) -> s32 #foreign fstlib;
fstUtilityBinToEsc :: (d: *u8, s: *u8, len: s32) -> s32 #foreign fstlib;
fstUtilityEscToBin :: (d: *u8, s: *u8, len: s32) -> s32 #foreign fstlib;
fstUtilityExtractEnumTableFromString :: (s: *u8) -> *fstETab #foreign fstlib;
fstUtilityFreeEnumTable :: (etab: *fstETab) -> void #foreign fstlib;

#scope_file

#import "Basic"; // For assert

fstlib :: #library,no_dll "modules/fst/external/fst/build/fstlib";
